kustomize/overlays/dev/namespace.yaml
apiVersion: v1
kind: Namespace
metadata:
  name: messageboard-dev  # Change per env
