kustomize/overlays/dev/patch-service.yaml
apiVersion: v1
kind: Service
metadata:
  name: my-app
spec:
  type: NodePort
  selector:
    app: dev-app
  ports:
    - protocol: TCP
      port: 80
      targetPort: 8080
      nodePort: 30081
