kustomize/overlays/dev/ingress.yaml
# apiVersion: networking.k8s.io/v1
# kind: Ingress
# metadata:
#   name: dev-ingress
#   namespace: messageboard-dev
#   annotations:
#     nginx.ingress.kubernetes.io/rewrite-target: /
# spec:
#   ingressClassName: nginx
#   rules:
#   - host: dev.messageboard.local
#     http:
#       paths:
#       - path: /
#         pathType: Prefix
#         backend:
#           service:
#             name: my-app
#             port:
#               number: 30081
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: dev-ingress
  namespace: messageboard-dev
  annotations:
    nginx.ingress.kubernetes.io/rewrite-target: /
    argocd.argoproj.io/sync-options: Replace=true
spec:
  ingressClassName: nginx
  tls:
  - hosts:
    - dev.messageboard.local
    secretName: messageboard-tlsx 
  rules:
  - host: dev.messageboard.local
    http:
      paths:
      - path: /
        pathType: Prefix
        backend:
          service:
            name: my-app
            port:
              number: 80
